syntax = "proto3";

option csharp_namespace = "UserService.Grpc";

package user;

// 用户信息服务
service UserService {
  // 根据用户ID获取用户信息
  rpc GetUserInfo (GetUserInfoRequest) returns (UserInfoResponse);
  
  // 批量获取用户信息
  rpc GetUsersInfo (GetUsersInfoRequest) returns (GetUsersInfoResponse);
}

// 获取单个用户信息请求
message GetUserInfoRequest {
  string user_id = 1;
}

// 用户信息响应
message UserInfoResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string avatar_url = 4;
  bool success = 5;
  string error_message = 6;
}

// 批量获取用户信息请求
message GetUsersInfoRequest {
  repeated string user_ids = 1;
}

// 批量用户信息响应
message GetUsersInfoResponse {
  repeated UserInfoResponse users = 1;
}
